feat: swr-long-list

--- a/docs/01.前端/01.React/02.SWR/01.入门.md
+++ b/docs/01.前端/01.React/02.SWR/01.入门.md
@@ -110,6 +110,8 @@ function Character() {
 `const { data, error, isValidating, mutate } = useSWR(key, fetcher, options)`
 
 useSWR的第一个参数除了作为请求地址还会被作为key值缓存当前请求到的数据，在下一次请求时swr发现key值相同，则读取缓存中的值
+
+关于剩余的参数和返回值，可以参考[官网](https://swr.bootcss.com/docs/options)
 :::
 
 **此外，自动重新请求也是swr的一大特色**
