--- a/docs/01.前端/01.React/02.SWR/04.预加载.md
+++ b/docs/01.前端/01.React/02.SWR/04.预加载.md
@@ -1,3 +1,5 @@
+## 用useSWR实现数据预加载
+
 数据预加载是一种常见的优化用户体验的方法，例如访问第一页时请求第二页的数据缓存起来，访问第二页时取缓存中的数据展示，并请求第三页，因为用户已经从缓存看到了第二页的内容，所以对他来说，请求好像根本没有发生，下一页的请求对用户来说是无感的。
 
 基于以上思路，我们很容易写出如下代码
@@ -100,8 +102,8 @@ const Preload = () => {
         for (let i = 1; i <= page; i++) {
             list.push(
                 <>
-                    <Page page={page} />
-                    <Page page={page + 1} show={false} />
+                    <Page page={i} />
+                    <Page page={i + 1} show={false} />
                 </>
             )
         }
@@ -115,4 +117,3 @@ const Preload = () => {
     )
 }
 ```
-
