--- a/docs/02.后端/04.mysql/01.起步.md
+++ b/docs/02.后端/04.mysql/01.起步.md
@@ -14,11 +14,15 @@ sitemap:
 
 ## 参考教程
 
-https://www.liaoxuefeng.com/wiki/1177760294764384
+[廖雪峰的mysql教程](https://www.liaoxuefeng.com/wiki/1177760294764384)
 
-## 结构
+## MySQL Client 和 MySQL Server
 
-数据库 -- 表 -- 记录
+用户可以在客户端通过命令`mysql -h id地址  -u root -p 密码` 登录服务端的3306端口（默认），如果没有填写-h地址，则默认连接本机ip地址：`127.0.0.1:3306`。客户端和服务端通过Tcp握手连接。 
+
+#### 命令行
+
+服务端的sql指令不是`mysql` 而是 `mysqld`
 
 ## 术语
 
@@ -75,4 +79,5 @@ ADD CONSTRAINT uni_name UNIQUE (name);
 -   DATE : 存储日期，例： 2018-06-22
 -   TIME : 存储时间，例：12:20:59
 -   DATETIME ： 存储日期+ 时间 ， 例： 2018-06-22 12:20:59
+
 
