--- a/docs/02.后端/04.mysql/02.查询.md
+++ b/docs/02.后端/04.mysql/02.查询.md
@@ -10,9 +10,9 @@ tags:
 sitemap:
   exclude: false
   changefreq: monthly
----
+--- 
 
-## 查询
+## 表查询
 
 ### 查询所有行：
 
@@ -310,3 +310,9 @@ ON S.class_id = C.id;
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220615151725.png)
 
 可以看到，虽然班级四没有匹配到的学生，但是因为右表要展示所有行，所以班级四匹配的学生是 `NULL` 
+
+## 其他查询
+
+- 列出所有数据库 ： `SHOW DATABASES;`
+- 列出所有表： `SHOW TABLES;`
+- 查看一个表的结构： `DESC 表名;`
