--- a/docs/02.后端/04.sql/02.查询.md
+++ b/docs/02.后端/04.sql/02.查询.md
@@ -192,6 +192,12 @@ GROUP BY CountryCode
 
 ![](https://linyc.oss-cn-beijing.aliyuncs.com/20220614162828.png)
 
+::: tip
+SELECT 选择需要查询的**列**信息
+
+GROUP BY 列名 ： 将该列重复的值作为一**行**
+:::
+
 ### 多表查询
 
 ```sql
