--- a/docs/02.后端/04.sql/03.操作数据库.md
+++ b/docs/02.后端/04.sql/03.操作数据库.md
@@ -41,9 +41,22 @@ INSERT INTO students (class_id, name, gender, score) VALUES
   (2, '二宝', 'M', 81);
 ```
 
+#### INSERT IGNORE INTO
+
+更多时候我们会指定主键进行插入，而不是使用递增组件。一个常见的场景就是用户列表，我们希望没有该用户时用一个唯一识别码创建该用户，有该用户时忽略这条命令，因此我们需要 `INSERT IGNORE INTO`
+
+```sql
+--- 格式
+INSERT IGNORE INTO 表名 (主键 ， 列名1，列名2) VALUES (主键值， 值1 ， 值2 )
+--- 例
+INSERT IGNORE INTO students (id, class_id, name, gender, score) VALUES (1, 1, '小明', 'F', 99); --- 若id=1的记录不存在，INSERT语句将插入新记录，否则不执行
+```
+
 ## 修改
 
-#### 修改记录
+### 修改记录
+
+#### UPDATE
 
 基本格式：
 
@@ -62,6 +75,24 @@ UPDATE students SET score=score+10 WHERE score<80;
 ::: danger
 如果UPDATE语句没有WHERE条件，那么整个表的记录都会被更新
 :::
+
+
+#### REPLACE
+
+`REPLACE` 语句和 `UPDATE`语句不一样的地方在于：UPDATE直接在原记录上进行修改，而REPLACE则是删除这一行记录并插入新纪录。两者都可以实现修改记录：
+
+```sql
+--- 基本格式：
+REPLACE INTO 表名（主键，列名1，列名2...） VALUES (主键值，值1 ， 值2 ...)
+--- 例：
+REPLACE INTO students (id, class_id, name, gender, score) VALUES (1, 1, '小明', 'F', 99);
+```
+
+::: tip
+1.  UPDATE不需要更新所有列名，但REPLACE本质上是新增一条数据，需要提供所有列名的值
+2.  REPLACE是根据主键来识别需要替换的行的，如果主键不存在，则会新增一条记录
+:::
+
 
 ### 修改表
 
@@ -102,4 +133,28 @@ DROP DATABASE  IF EXISTS 数据库名
 DELETE FROM <表名> WHERE ...;
 --- 例如
 DELETE FROM students WHERE id=1;
+```
+
+## 快照
+
+快照实际上就是把当前表的数据复制到一个新表中：`CREATE TABLE` 和 `SELECT` 语句组合起来就能够实现这个功能
+
+```sql
+CREATE TABLE 新表 SELECT * FROM 旧表
+--- 通常会附带条件语句（只需要旧表的某些数据）,例：
+CREATE TABLE students_of_class1 
+SELECT * FROM students 
+WHERE class_id=1;
+```
+
+## 写入查询结果集
+
+实际上， 不仅是 `CREATE TABLE` ， `SELECT` 可以和许多语句合用，比如 插入语句 `INSERT INTO` 
+
+```sql
+--- 向统计表 statistics 写入 各班的平均成绩
+INSERT INTO statistics (class_id , average) 
+SELECT class_id , AVG(score) 
+FROM STUDENT
+GROUP BY class_id --- 按class_id来进行分组,一班的平均成绩，二班的平均成绩...
 ```
