--- a/docs/02.后端/05.java/07.String.md
+++ b/docs/02.后端/05.java/07.String.md
@@ -79,12 +79,30 @@ String[] ss = s.split(","); // {"A", "B", "C", "D"}
 
 #### 拼接
 
-`String.join(分隔符， 字符串数组)`
+1.  `String.join(分隔符， 字符串数组)`
 
 ```java
 String[] arr = {"A", "B", "C"};
 String s = String.join("," , arr); // "A,B,C"
 ```
+
+2.  `StringJoiner`
+
+```java
+// 格式
+StringJoiner sj = new StringJoiner(分隔符, 开头， 结尾)
+sj.append(字符串1) // 【开头】【字符串1】【结尾】
+sj.append(字符串2) // 【开头】【字符串1】【分隔符】【字符串2】【结尾】
+
+// 例子：
+String[] names = {"Bob", "Alice", "Grace"};
+var sj = new StringJoiner(", ", "Hello ", "!");
+for (String name : names) {
+    sj.add(name);
+}
+System.out.println(sj.toString()); // Hello Bob,Alice,Grace!
+```
+
 
 #### 格式化
 
@@ -141,3 +159,31 @@ String s2 = new String(b, StandardCharsets.UTF_8); // 按UTF-8转换
 为了保证兼容所有文字，字符串 `string` 和字符 `char` 在内存中是依照 `Unicode` 编码的 `Byte` 格式
 :::
 
+## StringBuilder
+
+`String`具有不变性的特点，这就意味着当你操作一个字符串时：
+
+```java
+String s = "s"
+s = s + ',' + "b"
+```
+
+背后实际上是这样发生的：
+
+![](https://linyc.oss-cn-beijing.aliyuncs.com/20220618212633.png)
+
+这意味着当你反复操作一个字符串时，虚拟机每次都会在内存中重新开辟一块新的空间并指向它。
+
+> 这样，绝大部分字符串都是临时对象，不但浪费内存，还会影响GC效率。
+
+利用 `new SringBuilder` 你可以为变量手动开辟一块内存空间，并通过 `append` 不断操作这个缓存空间，例如：
+
+```java
+StringBuilder sb = new StringBuilder(1024)
+for (int i = 0; i < 1000; i++) {
+    sb
+    .append(',');
+    .append(i);
+}
+String s = sb.toString();
+```
