--- a/docs/02.后端/05.java/15.classPath.md
+++ b/docs/02.后端/05.java/15.classPath.md
@@ -23,13 +23,20 @@ windows上用`;`分隔，带空格的目录有`""`引号，可以是相对路径
 ```
 .;C:\work\project1\bin;C:\shared;"D:\My Documents\project1\bin"
 ```
+
+::: tip
+在windows中， `cmd` 执行语句的分隔符是 **&** , 而 `powerShell` 执行语句的分隔符是 **;**
+
+如果你使用的命令行工具是`powerShell`并且想用分号*;* 来分割多个classpath的话，需要使用 反引号**`;**来转义分号
+:::
+
 linux上用`:`分隔：
 ```
 shared:/usr/local/bin:/home/liaoxuefeng/bin
 ```
 
-举个更真实的例子：jvm加载一个类`abc.xyz.Hello`，它获取到的classpath是`C:\work\project1\bin;C:\shared`,它会依次查找：
--   当前目录：*\abc\xyz\Hello.class*（无指定classpath时默认）
+举个更真实的例子：jvm加载一个类`abc.xyz.Hello`，它获取到的classpath是`.;C:\work\project1\bin;C:\shared`,它会依次查找：
+-   `.` : 当前目录：*\abc\xyz\Hello.class*（无指定classpath时默认）
 -   *C:\work\project1\bin\abc\xyz\Hello.class*
 -   *C:\shared\abc\xyz\Hello.class*
 
