--- a/docs/02.后端/05.java/16.package.md
+++ b/docs/02.后端/05.java/16.package.md
@@ -112,7 +112,7 @@ javac -d bin src/moduleDemo/JavaTester.java
 
 **错误: 找不到或无法加载主类 bin.src.moduleDemo.JavaTester ; 原因: java.lang.NoClassDefFoundError: src/moduleDemo/JavaTester (wrong name: bin/src/moduleDemo/JavaTester)**
 
-原因是`package`, 我们设置了包名为`src.moduleDemo`,那么当虚拟机运行编译后的class文件时,它会读到这个信息,然后它会加入包名生成完整类名,并校验类名与你输入的路径名是否一致:
+原因是`package`, 我们设置了包名为`src.moduleDemo`,那么当虚拟机运行编译后的class文件时,它会读到这个信息,然后它会加入包名生成完整类名,并校验类名与**你输入的路径名**是否一致:
 
 -   输入路径为`bin/src/moduleDemo/JavaTester`
 -   完整类名为`src.moduleDemo.JavaTester`
