--- a/docs/02.后端/05.java/17.jar和模块.md
+++ b/docs/02.后端/05.java/17.jar和模块.md
@@ -14,6 +14,8 @@ sitemap:
 
 ## jar
 
+#### 创建和运行jar包
+
 `jar`就是`class类`的一个集合包，能够通过jar指令来创建，我们在上一节中将编译后的class文件放入了**bin**文件夹下，我们尝试将这些class文件打包成jar包：
 
 ```bash
@@ -31,6 +33,47 @@ jar -c -f JavaTester.jar --main-class src.moduleDemo.JavaTester -C bin .
 ```bash
 java -jar  JavaTester.jar
 ```
+
+#### 引用jar包
+
+我们下载了第三方包 `commons-logging-1.2.jar` , 并且在 `Hello.java` 中引用它打印日志：
+
+```java
+package package1;
+
+import org.apache.commons.logging.Log; // jar中的包路径
+import org.apache.commons.logging.LogFactory;
+
+public class Hello {
+    public static void main(String[] args) {
+        System.out.println("hello");
+        Log log = LogFactory.getLog(Hello.class);
+        log.info("start...");
+        log.warn("end.");
+    }
+}
+```
+
+文件结构：
+```bash
+
+│  commons-logging-1.2.jar
+└─package1
+        Hello.java
+```
+
+如何让 `Hello.java` 文件能够找到引入的 `commons-logging-1.2.jar` 文件，使得 `import` 语句不报错呢？我们需要指定编译和运行的 `classpath` 地址
+
+```bash
+javac -cp commons-logging-1.2.jar package1/Hello.java
+java -cp .`;commons-logging-1.2.jar package1.Hello  
+```
+
+注意运行时如果使用的是 `powerShell` ， 需要使用 反引号**`;**来转义 分号;
+
+::: tip
+第三方包的管理通常通过ide和maven来完成。不需要手动构建。
+:::
 
 ## 模块module
 
