--- a/docs/03.工具/04.vscode.md
+++ b/docs/03.工具/04.vscode.md
@@ -6,8 +6,16 @@ categories:
   - 工具
   - vscode
 tags:
-  - vscode插件
+  - vscode
 ---
+
+## 快捷键
+
+- 按住 `Ctrl + Alt` ，再按键盘上的上或下键，可以使一列上出现多个光标。
+- `Alt + 鼠标左键`  选中多行同时编辑
+- `Ctrl + Shift + L`  选中编辑代码中相同的内容
+- 按 `Shift + Alt` ，再使用鼠标拖动，也可以出现竖直的列光标，同时可以选中多列。
+- `Ctrl + Shift + P` 打开命令面板
 
 ## 插件
 
@@ -45,7 +53,6 @@ tags:
 
 #### 生成导航栏（table of content）
 
- `Ctrl + Shift + P`打开`command Palette` :
 
 - `Create Table of Contents` : 创造一个**toc**
 - `Update Table of Contents` : 更新**toc**
