--- a/docs/02.后端/05.java/30.maven.md
+++ b/docs/02.后端/05.java/30.maven.md
@@ -1,6 +1,6 @@
 ## 简介
 
-> Maven是一个Java项目管理和构建工具，它可以定义项目结构、项目依赖，并使用统一的方式进行自动化构建，是Java项目不可缺少的工具。
+> Maven是一个Java项目管理和构建工具，它可以定义项目结构、项目依赖，并使用统一的方式进行自动化构建，是Java项目不可缺少的工具。缩写是 `mvn` 。
 
 它的主要功能由：
 
@@ -54,6 +54,83 @@
 -   `mvn clean compile` : 先清理，再执行到 `compile`
 -   `mvn clean package` : 先清理，再执行到 `package`
 
-## 模块
+## 名词解释
 
-一个模板一个 `pom.xml` 文件，文件除了基本的
+-   **mvn ：** ： `Maven` 缩写
+-   **mvnw :** `mvnw` 是 `Maven Wrapper` 的缩写，可以为固定项目指定一个mvn版本，他包裹项目避免使用全局的mvn版本，名字中的 `wrapper` 由此而来。
+-   **archetype :** `archetype` 意思是原型，它可以生成maven初始项目 。全称 `Maven's archetype mechanism` ：maven原型机制。
+-   **groupId :** 类似包名，通常是公司或组织名称
+-   **artifactId :** : 类似类名，通常是项目名称
+-   **version :** : 项目版本
+
+## 配置案例云仓库
+
+把下面的配置复制到%MAVEN_HOME%/conf/setting.xml里面,</mirrors>节点内配置
+
+```
+<mirror> 
+<id>nexus-aliyun</id> 
+<mirrorOf>*</mirrorOf> 
+<name>Nexus aliyun</name> 
+<url>http://maven.aliyun.com/nexus/content/groups/public</url> 
+</mirror>
+```
+
+
+## 创建基础项目
+
+自动创建文件夹名为 `my-app` 的项目。配置如下：
+
+```bash
+mvn -B archetype:generate -DgroupId=com.mycompany.app -DartifactId=my-app -DarchetypeArtifactId=maven-archetype-quickstart -DarchetypeVersion=1.4
+```
+
+:::danger
+不要使用powsershell运行以上命令，用**cmd**
+:::
+
+原因是在powershell中参数并不是以等号来传递的，而是 **空格或冒号**,[详见](https://docs.microsoft.com/zh-cn/powershell/module/microsoft.powershell.core/about/about_parameters?view=powershell-7.2)：
+
+```bash
+-<parameter_name> <parameter_value>
+-<parameter_name>:<parameter_value>
+```
+
+
+`DarchetypeArtifactId ` 和 `DarchetypeVersion` 指明拉取模板的名称和版本。`DgroupId` 和 `DartifactId` 指明pom.xml的配置信息和文件夹结构，以下是文件夹结构：
+
+```
+D:.
+│  pom.xml
+│
+├─src
+│  ├─main
+│  │  └─java
+│  │      └─com
+│  │          └─mycompany
+│  │              └─app
+│  │                      App.java
+│  │
+│  └─test
+│      └─java
+│          └─com
+│              └─mycompany
+│                  └─app
+│                          AppTest.java
+│
+└─target
+    ├─classes
+    │  └─com
+    │      └─mycompany
+    │          └─app
+    │                  App.class
+    │
+    └─test-classes
+        └─com
+            └─mycompany
+                └─app
+                        AppTest.class
+```
+
+
+
