--- a/docs/01.前端/04.Webpack/01.起步.md
+++ b/docs/01.前端/04.Webpack/01.起步.md
@@ -9,9 +9,33 @@ tags:
   - Webpack
 ---
 
+## vscode代码提示
+
+这里的代码提示时说 `webpack.config.js` 文件的代码提示，vscode会从三个地方查找代码提示：
+- 插件
+- `node_modules`中的 **@type文件**
+- `jsDoc`的 **@type标签**
+
+我们根据第三点，从 `webpack` 引入配置文件，并添加 `@type标签`即可：
+
+```js
+import {Configuration} from 'webpack'
+
+/**
+ * @type {Configuration} 为config变量添加注释
+ */
+const config = {
+    entry : 'index.js'
+}
+
+module.exports = config
+```
 
 
-### 1. 初始化package.json并引入依赖包，使用npm/yarn/pnpm均可
+## 开始一个项目
+
+**1. 初始化package.json并引入依赖包，使用npm/yarn/pnpm均可**
+
 ```
 pnpm init -y
 pnpm i -D webpack webpack-cli webpack-dev-server html-webpack-plugin
@@ -36,20 +60,21 @@ package.json
 `webpack serve` :  调用`webpack-dev-server` 插件，编译后的代码存放在内存中，动态更新时只需要更改内存中的数据，因为不用更新写入文件，性能可以获得一定提升。
 :::
 
-### 2. 编写待编译的js文件
+**2. 编写待编译的js文件**
 
-main.js
+`main.js`
 
 <<< @/codes/webpack-demos-pro/basic/main.js
 
-### 3. 编写配置文件
+**3. 编写配置文件**
 
-webpack.config.js
+`webpack.config.js`
 
 <<< @/codes/webpack-demos-pro/basic/webpack.config.js
 
-### 4. 启动项目查看效果
-```
+**4. 启动项目查看效果**
+
+```bash
 pnpm dev 
 ```
 或
