--- a/docs/01.前端/06.JavaScript/05.JEST/01.入门.md
+++ b/docs/01.前端/06.JavaScript/05.JEST/01.入门.md
@@ -4,11 +4,15 @@
 yarn add --dev jest
 ```
 
-## vscode中jest代码只能提示
+## vscode中jest代码智能提示
 
 ```bash
 npm i -D @types/jest
 ```
+
+::: tip
+vscode只会读取 **根目录的node_modules** 中的@types库
+:::
 
 ## 起步案例
 
