--- a/docs/01.前端/06.JavaScript/05.JEST/05.api.md
+++ b/docs/01.前端/06.JavaScript/05.JEST/05.api.md
@@ -1,3 +1,29 @@
+## 生命周期
+
+`beforeEach` 和 `afterEach` 两个函数会在每个test函数执行的前后调用，官方示例：
+
+```js
+beforeEach(() => {
+  initializeCityDatabase();
+});
+
+// 如果初始化操作是一个异步行为，比如初始化远程数据库，那么应该return 这个异步对象，否则jest无法等待异步任务完成
+
+beforeEach(() => {
+  return initializeCityDatabaseAsync();
+});
+
+afterEach(() => {
+  clearCityDatabase();
+});
+
+test('city database has Vienna', () => {
+  expect(isCity('Vienna')).toBeTruthy();
+});
+```
+
+`beforeAll` 和 `afterAll` 函数只执行一次，在完成beforeAll函数之前，测试文件是堵塞的
+
 ## test 
 
 `test`函数接收一个字符串和一个回调函数，一个`test`就是一个测试用例
@@ -5,119 +31,107 @@
 -   字符串表示测试用例的名字
 -   回调函数可以包含多个`expect`任务，其中一个任务失败，则test函数停止测试
 
+`test`任务总是延迟执行，例如：
+
+```js
+test('check data', () => {
+  console.log(222);
+  expect(data).toContainEqual({ id: 1, name: 'xiaoming' })
+})
+
+console.log(111);
+
+// 111
+// 222 
+```
+
+## describe
+
+`describe` 相当于构建一个子作用域，可以定义子作用域中的生命周期方法，**根部的生命周期方法先于子作用域的方法执行**，官方示例：
+
+```js
+beforeAll(() => console.log('1 - beforeAll'));
+afterAll(() => console.log('1 - afterAll'));
+beforeEach(() => console.log('1 - beforeEach'));
+afterEach(() => console.log('1 - afterEach'));
+
+test('', () => console.log('1 - test'));
+
+describe('Scoped / Nested block', () => {
+  beforeAll(() => console.log('2 - beforeAll'));
+  afterAll(() => console.log('2 - afterAll'));
+  beforeEach(() => console.log('2 - beforeEach'));
+  afterEach(() => console.log('2 - afterEach'));
+
+  test('', () => console.log('2 - test'));
+});
+
+// 1 - beforeAll
+// 1 - beforeEach
+// 1 - test
+// 1 - afterEach
+// 2 - beforeAll
+// 1 - beforeEach
+// 2 - beforeEach
+// 2 - test
+// 2 - afterEach
+// 1 - afterEach
+// 2 - afterAll
+// 1 - afterAll
+```
+
+#### 关于执行顺序的总结
+
+执行顺序的优先级如下（数字越小优先级越高）：
+
+**不带describe:**
+1.  普通代码
+2.  before生命周期
+3.  test中的代码
+4.  after生命周期
+
+**带describe : 所有test顺序执行，不管在describe内还是在describe外**
+1.  普通代码
+2.  describe中的普通代码
+3.  test相关的生命周期（按顺序执行，如果在根部则不需要执行describe的周期）
+    1.  before周期
+    2.  describe中的before周期
+    3.  test代码
+    4.  after周期
+    5.  describe中的after周期
+
+示例：
+
+```js
+beforeEach(() => console.log('database setup'));
+afterEach(() => console.log('database teardown'));
+
+console.log('run');
+
+describe('extra', () => {
+  console.log('inner');
+  beforeEach(() => console.log('extra database setup'));
+  afterEach(() => console.log('extra database teardown'));
+
+  test('test 2', () => console.log('test 2'));
+});
+
+test('test 1', () => console.log('test 1'));
+
+// run
+// inner
+// database setup
+// extra database setup
+// test2
+// extra database teardown
+// database teardown
+
+// database setup
+// test1
+// database teardown
+```
+
 ## expect
 
 `expect` 方法接收一个值或函数，返回一个 `expection` 对象。用于调用 `matchers` 匹配器
 
-
-### 匹配器
-
-#### 公共匹配器
-
-**.toBe(目标值) ： 基本数据类型的比较**
-
-```js
-test('two plus two is four', () => {
-  expect(2 + 2).toBe(4);
-});
-```
-
-**.toEqual(目标值) : 对象类型的比较**
-
-```js
-test("object assign", () => {
-    const data = { one: 1 }
-    data['two'] = 2
-    expect(data).toEqual({ one: 1, two: 2 })
-})
-
-```
-
-**.not.xxx(目标值) : 不匹配目标值**
-
-#### 布尔值（类布尔值）匹配器
-
-**判断是否是空值：**
-
--    `expect(期望值).toBeNull()` : 匹配 `null`
--    `expect(期望值).toBeUndefined()` ： 匹配 `undefined`
--    `expect(期望值).toBeTruthy()` ： 匹配[Truthy值](https://developer.mozilla.org/zh-CN/docs/Glossary/Truthy)
--    `expect(期望值).toBeFalsy()` ：匹配[falsy值](https://developer.mozilla.org/zh-CN/docs/Glossary/Falsy)
-
-#### 数字匹配器
-
-**和数字比大小：**
-
--   `expect(期望值).toBeGreaterThan(目标值)` ： 期望值大于目标值
--   `expect(期望值).toBeGreaterThanOrEqual(目标值)` : 期望值大于等于目标值
--   `expect(期望值).toBeLessThan(目标值)` : 期望值小于目标值
--   `expect(期望值).toBeLessThanOrEqual(目标值)` : 期望值小于等于目标值
-
-**判断浮点数是否相等：**
-
-`expect(浮点数).toBeCloseTo(目标值)`
-
-```js
-test('adding floating point numbers', () => {
-  const value = 0.1 + 0.2;
-  //expect(value).toBe(0.3);       // 无效
-  expect(value).toBeCloseTo(0.3); // 匹配
-});
-```
-
-::: tip 为什么js浮点数运算会出现精度问题？
-js中会将浮点数转换成二进制来运算，因为有些浮点数用二进制表达是无穷的，IEEE 754双精度浮点数最多支持53位二进制位，53位后的精度会被截断，因此导致了浮点数运算的精度问题
-:::
-
-
-#### 字符串匹配器
-
-`expect(期望值).toMatch(正则表达式)` : 正则是否匹配期望值 , 官方示例：
-
-```js
-test('there is no I in team', () => {
-  expect('team').not.toMatch(/I/); // team中是否有I字符串
-});
-
-test('but there is a "stop" in Christoph', () => {
-  expect('Christoph').toMatch(/stop/); // Christoph中是否有stop字符串
-});
-```
-
-#### 数组和可迭代对象的匹配器
-
-`expect(期望值).toContain(目标值)`: 期望值中是否包含目标值，官方示例：
-
-```js
-const shoppingList = [
-  'diapers',
-  'kleenex',
-  'trash bags',
-  'paper towels',
-  'milk',
-];
-
-test('the shopping list has milk on it', () => {
-  expect(shoppingList).toContain('milk');  // 数组中是否包含milk字符串
-  expect(new Set(shoppingList)).toContain('milk'); // set中是否包含milk字符串
-});
-```
-
-#### 异常的匹配器
-
-`expect(函数).toThrow()` : 函数执行是否会抛出异常，官方示例：
-
-```js
-function compileAndroidCode() {
-  throw new Error('you are using the wrong JDK');
-}
-
-test('compiling android goes as expected', () => {
-  expect(() => compileAndroidCode()).toThrow(); // 抛出错误
-  expect(() => compileAndroidCode()).toThrow(Error); // 抛出Error类型的错误 
-
-  expect(() => compileAndroidCode()).toThrow('you are using the wrong JDK'); // 获取抛出的字符串
-  expect(() => compileAndroidCode()).toThrow(/JDK/); // 用正则匹配抛出的字符串
-});
-
-```
