--- a/docs/01.前端/06.JavaScript/05.JEST/05.生命周期.md
+++ b/docs/01.前端/06.JavaScript/05.JEST/05.生命周期.md
@@ -90,10 +90,9 @@ describe('Scoped / Nested block', () => {
 3.  test中的代码
 4.  after生命周期
 
-**带describe : 所有test顺序执行，不管在describe内还是在describe外**
-1.  普通代码
-2.  describe中的普通代码
-3.  test相关的生命周期（按顺序执行，如果在根部则不需要执行describe的周期）
+**带describe : 所有test和普通代码顺序执行，不管在describe内还是在describe外**
+1.  普通代码按顺序执行，不管是根部还是describe中的
+2.  test相关的生命周期（按顺序执行，如果在根部则不需要执行describe的周期）
     1.  before周期
     2.  describe中的before周期
     3.  test代码
@@ -131,7 +130,5 @@ test('test 1', () => console.log('test 1'));
 // database teardown
 ```
 
-## expect
 
-`expect` 方法接收一个值或函数，返回一个 `expection` 对象。用于调用 `matchers` 匹配器
 
