--- a/docs/02.后端/05.java/17.jar和模块.md
+++ b/docs/02.后端/05.java/17.jar和模块.md
@@ -72,7 +72,9 @@ java -cp .`;commons-logging-1.2.jar package1.Hello
 注意运行时如果使用的是 `powerShell` ， 需要使用 反引号**`;**来转义 分号;
 
 ::: tip
-第三方包的管理通常通过ide和maven来完成。不需要手动构建。
+因为我们是在编译和运行时才将第三方库和当前代码关联起来，所以编写代码时很可能没有代码提示，并且IDE会标红报错。
+
+因此第三方包的管理通常通过ide和[maven](/pages/08a6e4/)来完成。不需要手动构建。
 :::
 
 ## 模块module
