--- a/docs/03.工具/03.notion.md
+++ b/docs/03.工具/03.notion.md
@@ -18,7 +18,8 @@
 
 ##### 链接到内容块
 
-鼠标悬停在`⋮⋮`上，选择 `Copy Link`
+1.  鼠标悬停在`⋮⋮`上，选择 `Copy Link`
+2.  输入链接名，选择链接名，键入 `ctrl + k` , 复制刚才的链接地址
 
 
 #### 同步块
@@ -28,3 +29,20 @@
 #### 搜索
 
 `ctrl + P`
+
+#### 插入折叠块
+
+`>`
+
+#### 插入目录
+
+`/toc` ， **折叠块目录不会建立索引**
+
+#### 后退/前进
+
+-  `ctrl + [` : 后退
+-  `ctrl + ]` : 前进
+
+#### 插入删除线
+
+- `ctrl + shift + s`
