--- a/docs/03.工具/03.notion.md
+++ b/docs/03.工具/03.notion.md
@@ -32,7 +32,7 @@ sitemap:
 ##### 链接到内容块
 
 1.  鼠标悬停在`⋮⋮`上，选择 `Copy Link`
-2.  输入链接名，选择链接名，键入 `ctrl + k` , 复制刚才的链接地址
+2.  选定文本后，键入 `ctrl + k` , 复制刚才的链接地址;或者直接`ctrl + v` 复制链接名 
 
 
 #### 同步块
@@ -43,10 +43,6 @@ sitemap:
 
 `ctrl + P`
 
-#### 插入折叠块
-
-`>`
-
 #### 插入目录
 
 `/toc` ， **折叠块目录不会建立索引**
@@ -56,6 +52,11 @@ sitemap:
 -  `ctrl + [` : 后退
 -  `ctrl + ]` : 前进
 
-#### 插入删除线
+#### 选择当前区块
+`esc`
 
-- `ctrl + shift + s`
+### 标识符
+- 插入下划线 ： `ctrl + u`
+- 插入删除线 ： `ctrl + shift + s`
+- 插入折叠块： `>`
+- 插入内敛代码： `ctrl + e`
